# ossplate

./: .gitignore  CONTRIBUTING.md  README.md  ossplate.toml  scaffold-manifest.json  scaffold-payload.json  source-checkout.json
core-rs/: Cargo.template.toml  Cargo.toml  build.rs  scaffold-payload.json  source-checkout.json
core-rs/embedded-template-root/: CONTRIBUTING.md  README.md  scaffold-payload.json  source-checkout.json
core-rs/embedded-template-root/.github/workflows/: ci.yml  publish-npm.yml
core-rs/embedded-template-root/docs/: agent-operations.md
core-rs/embedded-template-root/docs/adrs/: 0003-curated-scaffold-payload.md  0008-stage-neutral-runtime-artifacts-for-wrapper-packaging.md  0010-scaffold-mirrors-are-generated-packaging-assets.md  0011-consolidate-release-assertion-commands.md  0013-pragmatic-solid-through-functional-core-and-thin-adapters.md
core-rs/embedded-template-root/scripts/: release-plan.mjs  release-state.mjs  repair-js-lockfile.mjs  stage-distribution-assets.mjs  stage-embedded-template.mjs  wait-for-npm-versions.mjs
core-rs/embedded-template-root/wrapper-js/platform-packages/ossplate-darwin-arm64/: package.json
core-rs/src/: config.rs  main.rs  main_tests.rs  output.rs  release.rs  scaffold.rs  scaffold_manifest.rs  source_checkout.rs  sync.rs  upgrade.rs  upgrade_catalog.rs  verify.rs
core-rs/src/scaffold/: identity_application.rs  projection.rs  template_root.rs
core-rs/src/sync/: metadata.rs  text.rs
wrapper-js/scaffold/core-rs/: Cargo.toml  build.rs  runtime-targets.json  source-checkout.json
wrapper-js/scaffold/core-rs/embedded-template-root/: .pre-commit-config.yaml
wrapper-js/scaffold/core-rs/embedded-template-root/docs/: README.md  customizing-the-template.md
wrapper-js/scaffold/core-rs/embedded-template-root/docs/adrs/: 0004-release-orchestration-stays-core-owned.md  0012-dry-through-canonical-contracts-and-generation.md  README.md
wrapper-js/scaffold/core-rs/embedded-template-root/scripts/: bump-version.mjs  verify.sh
wrapper-js/scaffold/core-rs/embedded-template-root/wrapper-js/: package.json
wrapper-js/scaffold/core-rs/embedded-template-root/wrapper-js/src/: index.ts
wrapper-js/scaffold/core-rs/src/: main.rs  main_tests.rs  output.rs  release.rs  scaffold.rs  sync.rs  verify.rs
wrapper-js/scaffold/core-rs/src/scaffold/: identity_application.rs
wrapper-js/scaffold/core-rs/src/sync/: text.rs
wrapper-js/scaffold/wrapper-py/: README.md  hatch_build.py  pyproject.toml
wrapper-js/scaffold/wrapper-py/src/ossplate/: cli.py
wrapper-py/: README.md  hatch_build.py  pyproject.toml
wrapper-py/src/ossplate/scaffold/: .gitignore  CONTRIBUTING.md  README.md  ossplate.toml  package-lock.json  scaffold-payload.json
wrapper-py/src/ossplate/scaffold/.github/workflows/: ci.yml  live-e2e-published.yml  publish-npm.yml  publish.yml  release.yml
wrapper-py/src/ossplate/scaffold/.husky/: pre-push
wrapper-py/src/ossplate/scaffold/core-rs/: Cargo.toml
wrapper-py/src/ossplate/scaffold/core-rs/embedded-template-root/: .gitignore  scaffold-payload.json
wrapper-py/src/ossplate/scaffold/core-rs/embedded-template-root/scripts/: verify-release.sh
wrapper-py/src/ossplate/scaffold/core-rs/embedded-template-root/wrapper-js/: README.md  package-lock.json
wrapper-py/src/ossplate/scaffold/core-rs/embedded-template-root/wrapper-py/: README.md
wrapper-py/src/ossplate/scaffold/core-rs/src/: embedded_template.rs  main.rs  main_tests.rs  output.rs  release.rs  scaffold.rs  scaffold_manifest.rs  source_checkout.rs  sync.rs  test_support.rs  verify.rs
wrapper-py/src/ossplate/scaffold/core-rs/src/scaffold/: identity_application.rs  (+1 more)
wrapper-py/src/ossplate/scaffold/docs/: README.md  architecture.md  customizing-the-template.md  hexagonal-shell.md  live-e2e.md  phase-1-contract.md  releases.md  testing.md
wrapper-py/src/ossplate/scaffold/docs/adrs/: 0003-curated-scaffold-payload.md  0015-agent-first-machine-readable-repo-contract.md  0016-structured-verification-gate-for-agent-operators.md  README.md
wrapper-py/src/ossplate/scaffold/scripts/: assert-publish-readiness.mjs  assert-release-state.mjs  bump-version.mjs  release-state.mjs  runtime-targets.mjs  verify.sh
wrapper-py/src/ossplate/scaffold/wrapper-js/: README.md  package-lock.json  package.json
wrapper-py/src/ossplate/scaffold/wrapper-js/src/: index.ts
wrapper-py/src/ossplate/scaffold/wrapper-py/: README.md  hatch_build.py  pyproject.toml
wrapper-py/tests/: test_cli.py
wrapper-py/tests/fixtures/: ossplate-stub.sh
(+117 files in other folders)
