[package]
name = "ossplate"
version = "0.4.2"
edition = "2021"
authors = ["Stef <stefdevscore@github.com>"]
description = "Scaffold and maintain one Rust-core CLI that ships cleanly through Cargo, npm, and PyPI."
license = "Unlicense"
readme = "../README.md"
repository = "https://github.com/stefdevscore/ossplate"
homepage = "https://github.com/stefdevscore/ossplate"
keywords = ["cli", "bootstrap", "distribution", "packaging", "multi-registry"]
categories = ["command-line-utilities", "development-tools"]
default-run = "ossplate"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[[bin]]
name = "ossplate"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
