[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossplate"
version = "0.5.6"
description = "Scaffold and maintain one Rust-core CLI that ships cleanly through Cargo, npm, and PyPI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
authors = [
  { name = "Stef", email = "stefdevscore@github.com" }
]
keywords = ["cli", "bootstrap", "distribution", "packaging", "multi-registry", "rust", "python", "npm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",
  "License :: Public Domain",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefdevscore/ossplate"
Repository = "https://github.com/stefdevscore/ossplate"

[project.scripts]
ossplate = "ossplate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ossplate"]
exclude = [
  "src/ossplate/bin/**",
]
pure_python = false

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
