[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossplate"
version = "0.2.2"
description = "Build one project, ship it everywhere."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
authors = [
  { name = "Stef", email = "stefdevscore@github.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Public Domain",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefdevscore/ossplate"
Repository = "https://github.com/stefdevscore/ossplate"

[project.scripts]
ossplate = "ossplate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ossplate"]
artifacts = [
  "src/ossplate/scaffold/**",
]
exclude = [
  "src/ossplate/bin/**",
]
pure_python = false

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
